--- a/src/app/main-components/city-chart/city-chart.component.html
+++ b/src/app/main-components/city-chart/city-chart.component.html
@@ -1,17 +1,18 @@
 <h1 class="text-center">{{ cityName }}</h1>
+<div class="add-scrolling hide-scrollbar">
+  <div id="divChart1">
+    <canvas id="canvasChart1"></canvas>
+  </div>
 
-<div id="divChart1">
-  <canvas id="canvasChart1"></canvas>
-</div>
+  <div id="divChart2">
+    <canvas id="canvasChart2"></canvas>
+  </div>
 
-<div id="divChart2">
-  <canvas id="canvasChart2"></canvas>
-</div>
+  <div id="divChart3">
+    <canvas id="canvasChart3"></canvas>
+  </div>
 
-<div id="divChart3">
-  <canvas id="canvasChart3"></canvas>
-</div>
-
-<div id="divChart4">
-  <canvas id="canvasChart4"></canvas>
+  <div id="divChart4">
+    <canvas id="canvasChart4"></canvas>
+  </div>
 </div>
