--- a/src/app/main-components/city-chart/city-chart.component.css
+++ b/src/app/main-components/city-chart/city-chart.component.css
@@ -4,3 +4,18 @@
   width:90vw;
   padding-bottom: 6vh;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.add-scrolling {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 90vh;
+}
