--- a/src/app/main-components/list-of-cities/list-of-cities.component.html
+++ b/src/app/main-components/list-of-cities/list-of-cities.component.html
@@ -4,15 +4,15 @@
 </div>
 
 
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap add-scrolling hide-scrollbar">
   <div class="flex-fill" *ngFor="let l of cities | keyvalue; let indexOfState = index;">
     <app-display-card
-                      (click)="showCityChart(l.key, l.value.recovered, l.value.deceased, l.value.confirmed, l.value.active)"
-                      [state-name]="l.key"
-                      [recovered-cases]="l.value.recovered"
-                      [decreased]="l.value.deceased"
-                      [confirmed-cases]="l.value.confirmed"
-                      [active-cases]="l.value.active"
+      (click)="showCityChart(l.key, l.value.recovered, l.value.deceased, l.value.confirmed, l.value.active)"
+      [state-name]="l.key"
+      [recovered-cases]="l.value.recovered"
+      [decreased]="l.value.deceased"
+      [confirmed-cases]="l.value.confirmed"
+      [active-cases]="l.value.active"
     ></app-display-card>
   </div>
 </div>
