--- a/src/app/main-components/list-of-places/list-of-places.component.css
+++ b/src/app/main-components/list-of-places/list-of-places.component.css
@@ -3,3 +3,19 @@
   height:40vh;
   width:90vw;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.add-scrolling {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 50vh;
+  padding-bottom: 10vh;
+}
