--- a/src/app/sub-components/display-card/display-card.component.html
+++ b/src/app/sub-components/display-card/display-card.component.html
@@ -1,5 +1,5 @@
-<mat-card class="panel-size text-white m-2 rounded-lg" style="background-color: #7395AE">
-  <mat-card-header class="justify-content-center">
+<mat-card class="panel-size text-white m-2 rounded-lg" [style.backgroundColor]="bgColor">
+  <mat-card-header class="justify-content-center text-center">
     <mat-card-title>{{ stName }}</mat-card-title>
   </mat-card-header>
 
