--- a/src/app/main-components/list-of-cities/list-of-cities.component.css
+++ b/src/app/main-components/list-of-cities/list-of-cities.component.css
@@ -2,6 +2,12 @@
   position: relative;
   height:40vh;
   width:90vw;
+  padding: 1em;
+  background-color: white;
+  margin-right: auto;
+  margin-left: auto;
+  border-radius: 1em;
+  box-shadow: 1px 1px 5px grey;
 }
 
 
