--- a/src/app/main-components/list-of-cities/list-of-cities.component.html
+++ b/src/app/main-components/list-of-cities/list-of-cities.component.html
@@ -4,7 +4,7 @@
 </div>
 
 
-<div class="d-flex flex-wrap add-scrolling hide-scrollbar">
+<div class="d-flex flex-wrap add-scrolling hide-scrollbar p-2">
   <div class="flex-fill" *ngFor="let l of cities | keyvalue; let indexOfState = index;">
     <app-display-card
       (click)="showCityChart(l.key, l.value.recovered, l.value.deceased, l.value.confirmed, l.value.active)"
