--- a/src/app/main-components/list-of-places/list-of-places.component.css
+++ b/src/app/main-components/list-of-places/list-of-places.component.css
@@ -1,7 +1,13 @@
 #divChart {
   position: relative;
-  height:40vh;
-  width:90vw;
+  height: 40vh;
+  width: 90vw;
+  padding: 1em;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 1em;
+  box-shadow: 1px 1px 5px grey;
 }
 
 .hide-scrollbar {
