--- a/src/app/main-components/list-of-places/list-of-places.component.html
+++ b/src/app/main-components/list-of-places/list-of-places.component.html
@@ -1,9 +1,9 @@
-<h1 class="text-center">India</h1>
+<h1 class="text-center">INDIA</h1>
 <div id="divChart">
   <canvas id="myChart"></canvas>
 </div>
 
-<div class="d-flex flex-wrap add-scrolling hide-scrollbar">
+<div class="d-flex flex-wrap add-scrolling hide-scrollbar p-2">
   <div class="flex-fill" *ngFor="let l of states; let indexOfState = index;">
     <app-display-card *ngIf="indexOfState>0 && indexOfState!=states.length-2"
                       (click)="gotToCities(states[indexOfState].state,
